contact_list_store_dispose: unset the timer ids

https://bugzilla.gnome.org/show_bug.cgi?id=662211